--- a/PositiveOrgs.html
+++ b/PositiveOrgs.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" type="image/png" href="images/chicago.png"/>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Alegreya&nbsp;Sans&nbsp;SC' rel='stylesheet'>    
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&display=swap" rel="stylesheet">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicago: The Black Experience </title>
   </head>
@@ -15,17 +15,17 @@
         <ul>
           <li><a class= 'current' href="PositiveOrgs.html"> Organizations</a></li>
           <li><a href="restaurants.html"> Restaurants </a></li>
-          <li><a href="clothing.html"> Clothing Brands</a></li>
+          <li><a href="events.html"> Events</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     <main class="container">
       
-    <header>
+    <header id="main">
       <h1>Chicago: The Black Experience</h1>
       <p>Chicago is a melting pot for multiple cultures, but the culture of Black people 
         in Chicago is one that is important and extremely personal. There are so many 
-        organizations, restaurants, and clothing brands ran by Black people that have a 
+        organizations, restaurants, and events ran by Black people that have a 
         positive impact on the community.
       </p>
     </header>
@@ -34,7 +34,6 @@
     </div> -->
       
     <br><div class="M3">
-      <a id="organizations"></a>
       <h2>My Block, My Hood, My City </h2>
       <p>My Block, My Hood, My City’s  (M3) purpose is “to inspire youth, empower communities, 
         and build a better world one block at a time.” This organization motivates everyone to 
@@ -50,7 +49,6 @@
         </div><br>
   
   <div class="ey">
-      <a id="organizations"></a>
       <h3>EmpowerYouth!</h3>
       <p>EmpowerYouth! is a program through the Chicago Urban League where 30 African American 
         high school students work to put on a performance. This program is in partnership with 
@@ -65,7 +63,6 @@
     </div> 
 
     <br><div class="social">
-      <a id="organizations"></a>
       <h4>Social Works</h4>
       <p>Social Works is a non-profit organization formed by Chance the Rapper, an African 
         American artist who is Chicago Native. Since 2016, Social Works has aimed to empower 
@@ -109,5 +106,8 @@
         <p>Etiam dolor ex, vehicula nec augue in, lobortis volutpat turpis. Pellentesque vel vestibulum metus. Nam luctus porta sapien a malesuada. Nunc porttitor imperdiet placerat. Mauris aliquam, purus nec viverra placerat, ipsum est sollicitudin ipsum, vel lacinia justo justo rutrum libero.</p>
       </div> -->
     </main>
-
+    <footer>
+      <p>University of Michigan School of Information <br/>
+        &copy; Briarre Johnson - Chicago: The Black Experience</p>
+    </footer>
   </body>
