--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <link rel="shortcut icon" type="image/png" href="images/chicago.png"/>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Alegreya&nbsp;Sans&nbsp;SC' rel='stylesheet'>    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&display=swap" rel="stylesheet">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">>
     <title>Chicago: The Black Experience </title>
   </head>
   <body>
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="PositiveOrgs.html">Organizations</a></li>
           <li><a href="restaurants.html"> Restaurants </a></li>
-          <li><a href="clothing.html"> Clothing Brands</a></li>
+          <li><a href="events.html">  Events</a></li>
           <li><a class= 'current' href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -29,6 +29,18 @@
         positive impact on the community.
       </p>
     </header>
+    <br><div class="me">
+      <h2>About Me</h2>
+      <p> Hi Everyone!
+         My name is Briarre Johnson and I am a Chicago native, also known as a Chicagoan! Chicago
+        is very important to me because I am Chicago. My roots reside in the city of Chicago and I take
+        pride in the amazing things we have going on in the city. If you would like to know more or get
+        involved in the city of Chicago, please feel free to contact me through the form below! 
+      </p>
+    </div>
+    <div class='me' id ="my_image"> 
+          <img src="images/me.jpeg" alt="" style='width: 400px;'/>
+        </div><br>
 <form class="contact">
     <label for="fname">First name:</label><br>
     <input type="text" id="fname" name="fname"><br>
@@ -36,4 +48,8 @@
     <input type="text" id="lname" name="lname"><br><br>
     <input type="submit" value="Submit">
   </form>
+  <footer>
+    <p>University of Michigan School of Information <br/>
+      &copy; Briarre Johnson - Chicago: The Black Experience</p>
+  </footer>
 </body>
